Storage list; Search button.

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -35,5 +35,15 @@
       </div>
     </div>
   </div>
+  <div class="storage-container">
+    <div class="storage-list">
+      <div class="active-storage">Storage A</div>
+      <div class="storage">Storage B</div>
+      <div class="storage">Storage C</div>
+    </div>
+  </div>
+  <div class="search-container">
+    <img class="search-image" src="static/icons/search.svg" alt="">
+  </div>
 </body>
 </html>
