Small color change; Css class naming fix.

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -35,7 +35,7 @@
       </div>
     </div>
   </div>
-  <div class="storage-container">
+  <div class="header">
     <div class="storage-list">
       <div class="active-storage">Storage A</div>
       <div class="storage">Storage B</div>
