--- a/frontend/main.html
+++ b/frontend/main.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="styles/pages/warehouse.css">
 
 
-  <link rel="icon" type="image/x-icon" href="/static/logo/itg-logo-nobg.png">
+  <link rel="icon" type="image/x-icon" href="static\logo\itg-logo-nobg.png">
   <title>ITG Warehouse Manager</title>
 </head>
 <body>
