--- a/frontend/main.html
+++ b/frontend/main.html
@@ -45,5 +45,40 @@
   <div class="search-container">
     <img class="search-image" src="static/icons/search.svg" alt="">
   </div>
+  <div class="storage-container">
+    <div class="column-container">
+      <div class="column-info">
+        <div class="column-title">
+          D-24
+        </div>
+        <div class="column-capacity">
+          🟢 Free (0 <span>&#47;</span> 8)
+        </div>
+      </div>
+    </div>
+    <!-- column-container -->
+    <div class="column-container">
+      <div class="column-info">
+        <div class="column-title">
+          D-23
+        </div>
+        <div class="column-capacity">
+          🟡 Partial (3 <span>&#47;</span> 8)
+        </div>
+      </div>
+    </div>
+    <!-- column-container -->
+    <div class="column-container">
+      <div class="column-info">
+        <div class="column-title">
+          D-22
+        </div>
+        <div class="column-capacity">
+          🔴 Full (8 <span>&#47;</span> 8)
+        </div>
+      </div>
+    </div>
+    <!-- column-container -->
+  </div>
 </body>
 </html>
