--- a/frontend/main.html
+++ b/frontend/main.html
@@ -55,6 +55,35 @@
           🟢 Free (0 <span>&#47;</span> 8)
         </div>
       </div>
+      <div class="column-units">
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+      </div>
     </div>
     <!-- column-container -->
     <div class="column-container">
@@ -66,6 +95,41 @@
           🟡 Partial (3 <span>&#47;</span> 8)
         </div>
       </div>
+      <div class="column-units">
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div style="background-color: #FFC145;" class="column-unit">
+          <span class="column-unit-title">CO</span>
+          <span class="column-unit-border">162560</span>
+          <span class="column-unit-shipment">47800</span>
+        </div>
+        <div style="background-color: #FFC145;" class="column-unit">
+          <span class="column-unit-title">CO</span>
+          <span class="column-unit-border">162560</span>
+          <span class="column-unit-shipment">47800</span>
+        </div>
+        <div style="background-color: #5CB338;" class="column-unit">
+          <span class="column-unit-title">CH</span>
+          <span class="column-unit-border">162561</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/pallet.svg" alt="">
+        </div>
+      </div>
     </div>
     <!-- column-container -->
     <div class="column-container">
@@ -75,6 +139,53 @@
         </div>
         <div class="column-capacity">
           🔴 Full (8 <span>&#47;</span> 8)
+        </div>
+      </div>
+      <div class="column-units">
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-border">162562</span>
+          <span class="column-unit-shipment"></span>
         </div>
       </div>
     </div>
