Columns and units.

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -45,5 +45,136 @@
   <div class="search-container">
     <img class="search-image" src="static/icons/search.svg" alt="">
   </div>
+  <div class="storage-container">
+    <div class="column-container">
+      <div class="column-info">
+        <div class="column-title">
+          D-24
+        </div>
+        <div class="column-capacity">
+          🟢 Free (0 <span>&#47;</span> 8)
+        </div>
+      </div>
+      <div class="column-units">
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+      </div>
+    </div>
+    <!-- column-container -->
+    <div class="column-container">
+      <div class="column-info">
+        <div class="column-title">
+          D-23
+        </div>
+        <div class="column-capacity">
+          🟡 Partial (3 <span>&#47;</span> 8)
+        </div>
+      </div>
+      <div class="column-units">
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div style="background-color: #FFC145;" class="column-unit">
+          <span class="column-unit-title">CO</span>
+          <span class="column-unit-bordero">162560</span>
+          <span class="column-unit-shipment">47800</span>
+        </div>
+        <div style="background-color: #FFC145;" class="column-unit">
+          <span class="column-unit-title">CO</span>
+          <span class="column-unit-bordero">162560</span>
+          <span class="column-unit-shipment">47800</span>
+        </div>
+        <div style="background-color: #4580ff;" class="column-unit">
+          <span class="column-unit-title">KZ</span>
+          <span class="column-unit-bordero">162561</span>
+          <span class="column-unit-shipment">47801</span>
+        </div>
+      </div>
+    </div>
+    <!-- column-container -->
+    <div class="column-container">
+      <div class="column-info">
+        <div class="column-title">
+          D-23
+        </div>
+        <div class="column-capacity">
+          🔴 Full (8 <span>&#47;</span> 8)
+        </div>
+      </div>
+      <div class="column-units">
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+        <div style="background-color: #ECE852;" class="column-unit">
+          <span class="column-unit-title">AE</span>
+          <span class="column-unit-bordero">162562</span>
+          <span class="column-unit-shipment"></span>
+        </div>
+      </div>
+    </div>
+    <!-- column-container -->
+  </div>
 </body>
 </html>
