New file structure.

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -5,9 +5,9 @@
   <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
 
   <!-- Styles -->
-  <link rel="stylesheet" href="styles/general/general.css">
-  <link rel="stylesheet" href="styles/general/sidebar.css">
-  <link rel="stylesheet" href="styles/pages/warehouse.css">
+  <link rel="stylesheet" href="static/styles/general/general.css">
+  <link rel="stylesheet" href="static/styles/general/sidebar.css">
+  <link rel="stylesheet" href="static/styles/pages/warehouse.css">
 
 
   <link rel="icon" type="image/x-icon" href="static\logo\itg-logo-nobg.png">
