Zooming and Panning in JS.

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -1,14 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <!-- Fonts -->
-  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
-
   <!-- Styles -->
   <link rel="stylesheet" href="static/styles/general/general.css">
   <link rel="stylesheet" href="static/styles/general/sidebar.css">
   <link rel="stylesheet" href="static/styles/pages/warehouse.css">
 
+  <!-- Scripts -->
+  <script defer src="static/scripts/pages/warehouse.js"></script> 
 
   <link rel="icon" type="image/x-icon" href="static\logo\itg-logo-nobg.png">
   <title>ITG Warehouse Manager</title>
@@ -45,7 +44,7 @@
   <div class="search-container">
     <img class="search-image" src="static/icons/search.svg" alt="">
   </div>
-  <div class="storage-container">
+  <div id="storage-container" class="storage-container">
     <div class="column-container">
       <div class="column-info">
         <div class="column-title">
