Unit shadow; More space between columns.

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -113,6 +113,15 @@
           <span class="column-unit-bordero">162561</span>
           <span class="column-unit-shipment">47801</span>
         </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
+        <div class="column-blank-unit">
+          <img class="column-blank-unit-image" src="static/icons/add.svg" alt="">
+        </div>
       </div>
     </div>
     <!-- column-container -->
@@ -126,11 +135,6 @@
         </div>
       </div>
       <div class="column-units">
-        <div style="background-color: #ECE852;" class="column-unit">
-          <span class="column-unit-title">AE</span>
-          <span class="column-unit-bordero">162562</span>
-          <span class="column-unit-shipment"></span>
-        </div>
         <div style="background-color: #ECE852;" class="column-unit">
           <span class="column-unit-title">AE</span>
           <span class="column-unit-bordero">162562</span>
