New sidebar background; Column unit hover effect.

--- a/frontend/main.html
+++ b/frontend/main.html
@@ -5,6 +5,7 @@
   <link rel="stylesheet" href="static/styles/general/general.css">
   <link rel="stylesheet" href="static/styles/general/sidebar.css">
   <link rel="stylesheet" href="static/styles/pages/warehouse.css">
+  <link rel="stylesheet" href="static/styles/general/gpt.css">
 
   <!-- Scripts -->
   <script defer src="static/scripts/pages/warehouse.js"></script> 
